Changed Docker files

--- a/TaskBoard.WebApp/appsettings.json
+++ b/TaskBoard.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Servel=mysqlserver;Database=TaskboardDB;user=root;password=Test1234!;"
+    "DefaultConnection": "server=mysqlserver;Database=TaskboardDB;user=root;password=Test1234!;SslMode=Disabled;"
   },
   "Logging": {
     "LogLevel": {
